--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -88,6 +88,18 @@
   timestamp = {Wed, 07 Jun 2017 14:41:51 +0200}
 }
 
+@article{panoptic,
+  title     = {Panoptic Segmentation},
+  author    = {Alexander KIRILLOV and Kaiming HE and Ross B. GIRSHICK and Carsten ROTHER and Piotr DOLL{\'{A}}R},
+  journal   = {CoRR},
+  volume    = {abs/1801.00868},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1801.00868},
+  archivePrefix = {arXiv},
+  eprint    = {1801.00868},
+  timestamp = {Thu, 01 Feb 2018 19:52:26 +0100}
+}
+
 @article{masklab,
   title     = {MaskLab: Instance Segmentation by Refining Object Detection with Semantic and Direction Features},
   author    = {Liang{-}Chieh CHEN and Alexander HERMANS and George PAPANDREOU and Florian SCHROFF and Peng WANG and Hartwig ADAM},
