g.extension command into documentation

--- a/text/prilohy.tex
+++ b/text/prilohy.tex
@@ -45,7 +45,13 @@ please install python3 versions.
 \end{itemize}
 
 After dependencies are fulfilled, modules can be installed using
-\emph{g.extension} module.
+\emph{g.extension} module:
+{\footnotesize
+\begin{lstlisting}
+g.extension extension=maskrcnn url=path/to/the/maskrcnn/folder
+\end{lstlisting}
+}
+
 
 \subsection*{GRASS GIS PATCH}
 
