--- a/text/prilohy.tex
+++ b/text/prilohy.tex
@@ -514,3 +514,37 @@ ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images c
 ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=cottages,plattenbaus model=/home/user/Documents/logs/mask_rcnn_houses_0100.h5 images_format=tif output_type=point
 \end{lstlisting}
 }
+
+\chapter{Examples}
+\label{examples}
+
+In the following chapter, few results obtained during tests of modules will be
+presented. Firstly a module trained to detect football and tennis pitches, then a module trained to detect buildings.
+
+\section{Pitches}
+
+The model for detecting football and tennis pitches was trained on a Debian server with 16 CPUs Intel Xeon E5540 (8 CPUs were in the use) and with memory 49 GBs. The processor base frequency of Intel Xeon E5540 is 2.53 GHz and the cache is 8~MB. The training used a model trained on the MS COCO dataset as a pre-trained model and the training took one month.
+
+The training dataset consisted of Bing maps\footnote{\url{https://www.bing.com/maps}} tiles with zoom level 18 (resolution 0.6 m per pixel) and masks corresponding to above mentioned pitches. The training dataset consited of almost 54000 images (plus masks).
+
+When the training was stopped, the loss function was about 0.86.
+
+\begin{figure}[H]
+   \centering
+	\includegraphics[width=.8\linewidth]{./pictures/out1.png}
+	\caption[Detection of football pitches]{An example of the detection on a picture containing football pitches}
+      \label{fig:football}
+\end{figure}
+
+\begin{figure}[H]
+   \centering
+	\includegraphics[width=.8\linewidth]{./pictures/out2.png}
+	\caption[Detection of tennis pitches]{An example of the detection on a picture containing tennis pitches}
+      \label{fig:tennis}
+\end{figure}
+
+The permission to usage of Bing map tiles was given to me specifically for purposes of this thesis.
+
+\section{Buildings}
+
+TODO?
